# backend

./: .env  .gitignore  CONTRIBUTING.md  README.md  compose.yaml  example.env  models.py  nginx.conf  requirements.txt
.github/workflows/: dev.yml  main.yml
accommodation-service/: .gitignore  Dockerfile  README.md  accommodation.db  docker-compose.yml  requirements.txt
accommodation-service/app/: main.py
activities-service/: .gitignore  readme.md
auth-service/: Dockerfile  README.md  entrypoint.sh  example.env  manage.py  pyproject.toml
auth-service/application/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
auth-service/application/migrations/: 0001_initial.py  0002_alter_applicationresourcepermission_permission.py  0003_application_api_key_plain_alter_application_api_key.py  0004_remove_application_api_key_plain.py
auth-service/authservice/: settings.py  urls.py  utils.py
auth-service/user/: admin.py  filters.py  initialiser.py  managers.py  models.py  serializers.py  urls.py  views.py
auth-service/user/migrations/: 0001_initial.py  0002_apply_user_types_creation.py  0002_user_home_address.py
economic_development/: README.md
events/: .env  Dockerfile  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
events/admin/: settings.py  urls.py
events/events/: admin.py  models.py  serializers.py  urls.py  views.py
events/events/migrations/: 0001_initial.py
health/: .gitignore  Dockerfile  README.md  db.sqlite3  entrypoint.sh  pyproject.toml
health/authentication/: backends.py  models.py
health/cemeteries/: apps.py  models.py  serializers.py  urls.py  views.py
health/cemeteries/migrations/: 0001_initial.py
health/complaints/: models.py  serializers.py  urls.py  views.py
health/complaints/migrations/: 0001_initial.py
health/environment/: models.py  permissions.py  serializers.py  urls.py  views.py
health/environment/migrations/: 0001_initial.py
health/health/: authentication.py  settings.py  urls.py  utils.py  validators.py
health/scripts/: dev.py
logging/: .env  pyproject.toml
logging/loggingservice/: celery.py  settings.py
poi/: README.md  requirements.txt
poi-service/: Dockerfile  README.md  docker-compose.yaml  entrypoint.prod.sh  logs.txt  nginx.conf  requirements.txt
poi-service/poi/: admin.py  models.py  (+3 more)
prometheus/: prometheus.yml
property_management_service/: .dockerignore  Dockerfile  README.md  auth.py  crud.py  db.py  example.env  init_db.py  main.py  requirements.txt
public-safety-service/: Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  env.example  requirements.txt
restaurant_service_python/: .env  Dockerfile  README.md  compose.yaml  example.env  init_db.py  main.py  models.py  requirements.txt  startup.sh
waste-management-service/: .gitignore  readme.md
weather/: README.md  main.py
(+163 files in other folders)
